<resources>
    <string name="app_name">MoxyExample</string>
    <string name="frag1">Пример 1</string>
    <string name="frag1_moxy">Пример 1 - moxy</string>
    <string name="frag2">Пример 2</string>
    <string name="frag2_moxy">Пример 2 - moxy</string>
    <string name="frag_view_pager">Пример 3 - viewpager</string>
    <string name="button_load_image">Перекрасить !</string>
    <string name="button_calc">Сложить</string>
    <string name="term_1">Слагаемое 1</string>
    <string name="term_2">Слагаемое 2</string>
    <string name="sum">0</string>
    <string name="animals_list">Список зверюшек</string>
    <string name="animal">Животное</string>

    <!--menu-->
    <string name="load_wild_animals">Загрузить диких животных</string>
    <string name="load_home_animals">Загрузить домашних животных</string>
    <string name="add_something">Что-то добавить</string>
    <string name="app_settings">Настройки приложения</string>
    <string name="start_page">Начальная страница</string>
    <string name="next_page">Следующая страница</string>
    <string name="some_text">Просто текст</string>

    <!--Drawer-->
    <string name="home_nav">Домашний экран</string>
    <string name="vp_nav">Экран с ViewPager</string>
    <string name="image_nav">Экран c Image</string>
    <string name="rv_nav">Экран с RV</string>
    <string name="android_studio">Android Studio</string>
    <string name="android_studio_android_com">android.studio@android.com</string>
    <string name="addition_pages">Доп. экраны</string>
	<string name="button_load_db">Загрузить данные в БД</string>
    <string name="button_clean_db">Очистить данные в БД</string>

</resources>
