<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_exmp_nomoxy_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_exmp_moxy_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag1_moxy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exmp_nomoxy_1" />

    <Button
        android:id="@+id/btn_exmp_nomoxy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exmp_moxy_1" />

    <Button
        android:id="@+id/btn_exmp_moxy_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/frag2_moxy"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_exmp_nomoxy_2" />
</androidx.constraintlayout.widget.ConstraintLayout>